<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="16dp"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:letterSpacing="0.07"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Signup"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_margin="12dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_input"
            android:background="@drawable/rounded_corner"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_margin="12dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_input"
            android:background="@drawable/rounded_corner"
            android:hint="Username"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_margin="12dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_input"
            android:background="@drawable/rounded_corner"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_margin="12dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password_input"
            android:background="@drawable/rounded_corner"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_margin="12dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/submit_btn"
            android:text="Signup"
            android:layout_margin="12dp"
            android:padding="12dp"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/progress_bar"
            android:layout_margin="12dp"
            android:visibility="gone"
            android:padding="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account"
            android:id="@+id/go_to_login_btn"/>

    </LinearLayout>



</LinearLayout>


















